add translate and hieroglyph
