# routes/hieroglyphRouter.js
@@ -1,0 +1,8 @@
+const express = require("express");
+const hieroglyphController = require("../controller/hieroglyphController");
+
+const router = express.Router();
+
+router.post("/", hieroglyphController.getHieroglyphData);
+
+module.exports = router; 
